--- a/History.txt
+++ b/History.txt
@@ -5,3 +5,16 @@ Operation{num1=23.0, num2=23.0, result=46.0, type='sum'}
 Operation{num1=23.0, num2=23.0, result=46.0, type='sum'}
 Operation{num1=23.0, num2=32.0, result=55.0, type='sum'}
 Operation{num1=22.0, num2=22.0, result=44.0, type='sum'}
+Operation{num1=23.0, num2=32.0, result=736.0, type='mult'}
+Sat Mar 11 11:08:05 MSK 2023Operation{num1=23.0, num2=32.0, result=55.0, type='sum'}
+Sat Mar 11 11:09:31 MSK 2023Operation{num1=23.0, num2=43.0, result=0.5348837209302325, type='div'}
+Sat Mar 11 11:09:31 MSK 2023Operation{num1=45.0, num2=76.0, result=121.0, type='sum'}
+Operation{num1=43.0, num2=56.0, result=99.0, type='sum'}Sat Mar 11 11:18:20 MSK 2023
+Operation{num1=43.0, num2=12.0, result=3.5833333333333335, type='div'}Sat Mar 11 11:18:20 MSK 2023
+Operation{num1=45.0, num2=76.0, result=3420.0, type='mult'}Sat Mar 11 11:18:20 MSK 2023
+Operation{num1=43.0, num2=65.0, result=-22.0, type='sub'}Sat Mar 11 11:18:20 MSK 2023
+Operation{num1=23.0, num2=78.0, result=101.0, type='sum'}Sat Mar 11 11:18:20 MSK 2023
+Sat Mar 11 11:21:21 MSK 2023Operation{num1=45.0, num2=78.0, result=123.0, type='sum'}
+Sat Mar 11 11:22:21 MSK 2023Operation{num1=23.0, num2=56.0, result=79.0, type='sum'}
+Sat Mar 11 11:22:21 MSK 2023Operation{num1=43.0, num2=65.0, result=0.6615384615384615, type='div'}
+Sat Mar 11 11:56:26 MSK 2023Operation{num1=43.0, num2=65.0, result=108.0, type='sum'}
